[tool.poetry]
name = "manualbox"
version = "0.1.0"
description = "Encypted file system with user input"
authors = ["Kushal Das <mail@kushaldas.in>"]
license = "GPLv3+"

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = "^5.14.1"
fusepy = "^3.0.1"
cryptography = "^2.8.0"
psutil = "^5.7.0"


[tool.poetry.dev-dependencies]
black = "^19.10b0"
pyinstaller = {version = "^3.6", platform = "darwin"}
setuptools = {version = "^45.2.0", platform = "windows"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"